--- a/Customization_basics_tensors_and_ooperations.ipynb
+++ b/Customization_basics_tensors_and_ooperations.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYre8YqA2vTk9lrqMfd+sj",
+      "authorship_tag": "ABX9TyNEMweU9dyV7itRB4juRRoX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "4Yn2SE61G6jg"
       },
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tl0UTIeUIjCt",
-        "outputId": "165159cb-9236-4ce3-d352-eaa7bfb61567"
+        "outputId": "ab3a2566-2678-4fd8-9b53-c2bbdba64287"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,9 +114,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "or3lVk4pKZ-s",
-        "outputId": "ea0bbb66-0b50-4f06-9dc7-394291819b03"
+        "outputId": "b15f45a5-824d-4fa3-8dce-5b5b3c46c4cd"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t0B639gHKzka",
-        "outputId": "fa9b1104-9262-48ea-b33f-1080808ed7d8"
+        "outputId": "5089810d-80c4-4037-d012-46e7a2b52e8b"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7BYoixsUN27-",
-        "outputId": "0dd1af8d-e377-429a-bcff-447f70e62a8e"
+        "outputId": "b52f9f5f-905e-4913-f6c9-222f0988ed0b"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,10 +250,109 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Device names**\n",
+        "\n",
+        "The Tensor.devices property provides a fully qualified string name of the device hosting the contents of the tensor. This name encodes many details such as an identifier of the network address of the host on which this program is executing and the device within that host. This is required for distributed execution of a TensorFlow program. The string ends with with GPU:<N> if the tensor is placed on the N-th GPU on the host.\n",
+        "\n",
+        "**Explicit device placement**\n",
+        "\n",
+        "In TensorFlow, placement refers to how individual operations are assigned (place on) a device for execution. As mentioned, when there is no explicit guidance provided, tensorflow automatically decides which device to execute an operation and copies tensors to that device, if needed.\n",
+        "\n",
+        "However, TensorFlow operations can be explicitly placed on specific devices using the tf.device context manager. For example:"
+      ],
+      "metadata": {
+        "id": "GoRbsxrMRbz7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "\n",
+        "def time_matmul(x):\n",
+        "  start = time.time()\n",
+        "  for loop in range(10):\n",
+        "    tf.linalg.matmul(x, x)\n",
+        "\n",
+        "  result = time.time() - start\n",
+        "\n",
+        "  print(\"10 loops: {:0.2f}ms\".format(1000*result))\n",
+        "\n",
+        "# Force execution on CPU\n",
+        "print(\"On CPU:\")\n",
+        "with tf.device(\"CPU:0\"):\n",
+        "  x = tf.random.uniform([1000, 1000])\n",
+        "  assert x.device.endswith(\"CPU:0\")\n",
+        "  time_matmul(x)\n",
+        "\n",
+        "# Force execution on GPU #0 if available\n",
+        "if tf.config.list_physical_devices(\"GPU\"):\n",
+        "  print(\"On GPU:\")"
+      ],
+      "metadata": {
+        "id": "6l-Lr8zEPolk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3dc5bfe-5fcc-4423-c215-8d7c2a48a7ed"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On CPU:\n",
+            "10 loops: 393.56ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Datasets**\n",
+        "\n",
+        "This section uses the tf.data.Dataset API to build a pipeline for feeding data to your model. tf.data.Dataset is used to build performant, complex input pipelines form simple, re-usable pieces that will feed your model's training or evaluation to loops.\n",
+        "\n",
+        "**Create a source Dataset**\n",
+        "\n",
+        "Create a source dataset using one of the factory functions like tf.data.Dataset.from_tensors, tf.data.Dataset.from_tensor_slices, or using objects that read files like tf.data.TextLineDataset or tf.data.TFRecordDataset."
+      ],
+      "metadata": {
+        "id": "0_YW9r0_9kFz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ds_tensors = tf.data.Dataset.from_tensor_slices([1, 2, 3, 4, 5, 6])\n",
+        "\n",
+        "# Create a CSV file\n",
+        "import tempfile\n",
+        "_, filename = tempfile.mkstemp()\n",
+        "\n",
+        "with open(filename, 'w') as f:\n",
+        "  f.write(\"\"\"Line1\n",
+        "  Line 2\n",
+        "  Line 3\n",
+        "  \"\"\")\n",
+        "\n",
+        "ds_file = tf.data.TextLineDataset(filename)"
+      ],
+      "metadata": {
+        "id": "3HTLStX29jOI"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6l-Lr8zEPolk"
+        "id": "luf331iO_YY5"
       },
       "execution_count": null,
       "outputs": []
